<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jogger.jogger.HomeActivity$PlaceholderFragment"
    android:background="#FFFFFF">

    <ScrollView android:id="@+id/busca_evento_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/linear_busca_evento_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin">


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/radioGroupFiltroBusca">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Período específico"
                    android:id="@+id/rbPeriodoEspecifico"
                    android:textColor="#000000"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Por Frequência Semanal"
                    android:id="@+id/rbFrequenciaSemanal"
                    android:textColor="#000000"
                    android:visibility="gone" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eventos próximos de acontecer"
                    android:id="@+id/rbEventoProximo"
                    android:textColor="#000000" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:id="@+id/lblDistancia"
                android:textColor="#1d1d26"
                android:layout_gravity="left"
                android:password="false"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txtCodigosModalidades"
                android:visibility="gone" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/lineModalidades"
            android:showDividers="beginning"
            android:divider="#f3f3f4"
            android:dividerPadding="6dp"
            android:background="@drawable/border_set"
                android:clickable="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_margin="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:id="@+id/lblModalidadeBusca"
                    android:textColor="#1d1d26"
                    android:layout_marginTop="8dp"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Selecione as modalidades"
                    android:id="@+id/lblModalidadesEscolhidas"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">"
                android:textColor="#bbbbbd"
                android:textSize="40sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:id="@+id/lineDiaSemana"
                android:paddingTop="5dp"
                android:background="@drawable/border_set"
                android:clickable="true"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/day_week"
                        android:id="@+id/lblDiaSemana"
                        android:textColor="#1d1d26"
                        android:layout_margin="@dimen/activity_horizontal_margin" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Selecione"
                        android:id="@+id/lblDiaSemanaEscolhida"
                        android:textColor="#1d1d26"
                        android:layout_marginTop="20dp"
                        android:gravity="left"
                        android:layout_marginRight="14dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=">"
                        android:textColor="#bbbbbd"
                        android:textSize="40sp"
                        android:textAlignment="center"
                        android:layout_marginRight="8dp"
                        android:gravity="right"
                        android:layout_toRightOf="@+id/lblDiaSemanaEscolhida"
                        android:layout_marginTop="4dp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/lineHorario"
                android:clickable="true"
                android:background="@drawable/border_set"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:id="@+id/lblHorario"
                    android:textColor="#1d1d26"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_horizontal_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selecione"
                    android:id="@+id/lblHorarioEscolhido"
                    android:textColor="#1d1d26"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_gravity="left"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/lineDtInicio"
                android:clickable="true"
                android:background="@drawable/border_set">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_period"
                    android:id="@+id/lblDtInicioBusca"
                    android:textColor="#1d1d26"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_horizontal_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selecione"
                    android:id="@+id/lblDtInicioEscolhido"
                    android:textColor="#1d1d26"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_gravity="left"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/lineDtFim"
                android:clickable="true"
                android:background="@drawable/border_set">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/final_period"
                    android:id="@+id/lblDtFimBusca"
                    android:textColor="#1d1d26"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_horizontal_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selecione"
                    android:id="@+id/lblDtFimEscolhido"
                    android:textColor="#1d1d26"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_gravity="left"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/border_set">

            </RelativeLayout>

            <Button android:id="@+id/btnBuscarEventos" style="@style/buttonStyle"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="25dp" android:text="@string/search_events"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
